# rgbnode-rs

./: .gdbinit  .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
src/: ir.rs  main.rs  node.rs  rgb.rs  serial.rs
